@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2023 Contributors to the Eclipse Foundation
  * Copyright (c) 1997-2020 Oracle and/or its affiliates. All rights reserved.
  * Copyright 2004 The Apache Software Foundation
  *
@@ -18,6 +19,21 @@
 package org.apache.catalina.authenticator;
 
 import static com.sun.logging.LogCleanerUtil.neutralizeForLog;
+import static jakarta.servlet.http.HttpServletResponse.SC_SERVICE_UNAVAILABLE;
+import static java.util.logging.Level.FINE;
+import static java.util.logging.Level.INFO;
+import static java.util.logging.Level.SEVERE;
+import static org.apache.catalina.LogFacade.CONFIG_ERROR_MUST_ATTACH_TO_CONTEXT;
+import static org.apache.catalina.LogFacade.GETTING_DEBUG_VALUE_EXCEPTION;
+import static org.apache.catalina.LogFacade.LOGIN_FAIL;
+import static org.apache.catalina.Realm.AUTHENTICATED_NOT_AUTHORIZED;
+import static org.apache.catalina.Realm.AUTHENTICATE_NEEDED;
+import static org.apache.catalina.Realm.AUTHENTICATE_NOT_NEEDED;
+import static org.apache.catalina.authenticator.Constants.FORM_ACTION;
+import static org.apache.catalina.authenticator.Constants.REQ_SSOID_NOTE;
+import static org.apache.catalina.authenticator.Constants.REQ_SSO_VERSION_NOTE;
+import static org.apache.catalina.authenticator.Constants.SESS_PASSWORD_NOTE;
+import static org.apache.catalina.authenticator.Constants.SESS_USERNAME_NOTE;
 
 import java.io.IOException;
 import java.lang.reflect.Method;
@@ -53,34 +69,23 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 /**
- * Basic implementation of the <b>Valve</b> interface that enforces the
- * <code>&lt;security-constraint&gt;</code> elements in the web application
- * deployment descriptor.  This functionality is implemented as a Valve
- * so that it can be ommitted in environments that do not require these
- * features.  Individual implementations of each supported authentication
- * method can subclass this base class as required.
+ * Basic implementation of the <b>Valve</b> interface that enforces the <code>&lt;security-constraint&gt;</code>
+ * elements in the web application deployment descriptor. This functionality is implemented as a Valve so that it can be
+ * ommitted in environments that do not require these features. Individual implementations of each supported
+ * authentication method can subclass this base class as required.
  * <p>
- * <b>USAGE CONSTRAINT</b>:  When this class is utilized, the Context to
- * which it is attached (or a parent Container in a hierarchy) must have an
- * associated Realm that can be used for authenticating users and enumerating
- * the roles to which they have been assigned.
+ * <b>USAGE CONSTRAINT</b>: When this class is utilized, the Context to which it is attached (or a parent Container in a
+ * hierarchy) must have an associated Realm that can be used for authenticating users and enumerating the roles to which
+ * they have been assigned.
  * <p>
- * <b>USAGE CONSTRAINT</b>:  This Valve is only useful when processing HTTP
- * requests.  Requests of any other type will simply be passed through.
+ * <b>USAGE CONSTRAINT</b>: This Valve is only useful when processing HTTP requests. Requests of any other type will
+ * simply be passed through.
  *
  * @author Craig R. McClanahan
  * @version $Revision: 1.17.6.3 $ $Date: 2008/04/17 18:37:04 $
  */
 
-
-public abstract class AuthenticatorBase
-    extends ValveBase
-    /** CR 6411114 (Lifecycle implementation moved to ValveBase)
-    implements Authenticator, Lifecycle {
-    */
-    // START CR 6411114
-    implements Authenticator {
-    // END CR 6411114
+public abstract class AuthenticatorBase extends ValveBase implements Authenticator {
 
     // ----------------------------------------------------- Static Variables
 
@@ -90,12 +95,10 @@ public abstract class AuthenticatorBase
     /**
      * Descriptive information about this implementation.
      */
-    protected static final String info =
-        "org.apache.catalina.authenticator.AuthenticatorBase/1.0";
+    protected static final String info = "org.apache.catalina.authenticator.AuthenticatorBase/1.0";
 
     /**
-     * The number of random bytes to include when generating a
-     * session identifier.
+     * The number of random bytes to include when generating a session identifier.
      */
     protected static final int SESSION_ID_BYTES = 16;
 
@@ -104,124 +107,81 @@ public abstract class AuthenticatorBase
      */
     protected static final String AUTH_HEADER_NAME = "WWW-Authenticate";
 
-
     /**
      * Default authentication realm name.
      */
     protected static final String REALM_NAME = "Authentication required";
 
-
     // ----------------------------------------------------- Instance Variables
     /**
-     * Should a session always be used once a user is authenticated? This may
-     * offer some performance benefits since the session can then be used to
-     * cache the authenticated Principal, hence removing the need to
-     * authenticate the user via the Realm on every request. This may be of help
-     * for combinations such as BASIC authentication used with the JNDIRealm or
-     * DataSourceRealms. However there will also be the performance cost of
-     * creating and GC'ing the session. By default, a session will not be
-     * created.
+     * Should a session always be used once a user is authenticated? This may offer some performance benefits since the
+     * session can then be used to cache the authenticated Principal, hence removing the need to authenticate the user via
+     * the Realm on every request. This may be of help for combinations such as BASIC authentication used with the JNDIRealm
+     * or DataSourceRealms. However there will also be the performance cost of creating and GC'ing the session. By default,
+     * a session will not be created.
      */
-    protected boolean alwaysUseSession = false;
+    protected boolean alwaysUseSession;
 
     /**
-     * Should we cache authenticated Principals if the request is part of
-     * an HTTP session?
+     * Should we cache authenticated Principals if the request is part of an HTTP session?
      */
     protected boolean cache = true;
 
     /**
-     * Should the session ID, if any, be changed upon a successful
-     * authentication to prevent a session fixation attack?
+     * Should the session ID, if any, be changed upon a successful authentication to prevent a session fixation attack?
      */
     protected boolean changeSessionIdOnAuthentication = true;
-
 
     /**
      * The Context to which this Valve is attached.
      */
-    protected Context context = null;
-
+    protected Context context;
 
     /**
-     * A String initialization parameter used to increase the entropy of
-     * the initialization of our random number generator.
+     * A String initialization parameter used to increase the entropy of the initialization of our random number generator.
      */
-    protected String entropy = null;
+    protected String entropy;
 
     /**
-     * Flag to determine if we disable proxy caching, or leave the issue
-     * up to the webapp developer.
+     * Flag to determine if we disable proxy caching, or leave the issue up to the webapp developer.
      */
     protected boolean disableProxyCaching = true;
 
     /**
-     * The lifecycle event support for this component.
-     */
-    /** CR 6411114 (Lifecycle implementation moved to ValveBase)
-    protected LifecycleSupport lifecycle = new LifecycleSupport(this);
-    */
-
-    /**
      * A random number generator to use when generating session identifiers.
      */
-    protected SecureRandom random = null;
+    protected SecureRandom random;
 
     /**
-     * The Java class name of the random number generator class to be used
-     * when generating session identifiers.
+     * The Java class name of the random number generator class to be used when generating session identifiers.
      */
     protected String randomClass = SecureRandom.class.getName();
 
     /**
-     * The SingleSignOn implementation in our request processing chain,
-     * if there is one.
+     * The SingleSignOn implementation in our request processing chain, if there is one.
      */
-    protected SingleSignOn sso = null;
+    protected SingleSignOn sso;
 
     /**
-     * Has this component been started?
-     */
-    /** CR 6411114 (Lifecycle implementation moved to ValveBase)
-    protected boolean started = false;
-    */
-
-    /**
-     * "Expires" header always set to Date(1), so generate once only
-     */
-    //START SJSAS 6202703
-    /*
-    private static final String DATE_ONE =
-            (new SimpleDateFormat(DateTool.HTTP_RESPONSE_DATE_HEADER,
-            Locale.US)).format(new Date(1));
-    */
-    //END SJSAS 6202703
-
-    /**
-     * Flag to determine if we disable proxy caching with headers incompatible
-     * with IE
+     * Flag to determine if we disable proxy caching with headers incompatible with IE
      */
     protected boolean securePagesWithPragma = true;
-
 
     // ------------------------------------------------------------- Properties
     public boolean getAlwaysUseSession() {
         return alwaysUseSession;
     }
 
-
     public void setAlwaysUseSession(boolean alwaysUseSession) {
         this.alwaysUseSession = alwaysUseSession;
     }
-
 
     /**
      * Return the cache authenticated Principals flag.
      */
     public boolean getCache() {
-        return (this.cache);
+        return cache;
     }
-
 
     /**
      * Set the cache authenticated Principals flag.
@@ -232,15 +192,13 @@ public abstract class AuthenticatorBase
         this.cache = cache;
     }
 
-
     /**
      * Return the Container to which this Valve is attached.
      */
     @Override
     public Container getContainer() {
-        return (this.context);
+        return context;
     }
-
 
     /**
      * Set the Container to which this Valve is attached.
@@ -249,25 +207,22 @@ public abstract class AuthenticatorBase
      */
     @Override
     public void setContainer(Container container) {
-
-        if (!(container instanceof Context))
-            throw new IllegalArgumentException
-                    (rb.getString(LogFacade.CONFIG_ERROR_MUST_ATTACH_TO_CONTEXT));
+        if (!(container instanceof Context)) {
+            throw new IllegalArgumentException(rb.getString(CONFIG_ERROR_MUST_ATTACH_TO_CONTEXT));
+        }
 
         super.setContainer(container);
         this.context = (Context) container;
         this.securePagesWithPragma = context.isSecurePagesWithPragma();
     }
 
-
     /**
      * Return the debugging detail level for this component.
      */
     @Override
     public int getDebug() {
-        return (this.debug);
+        return debug;
     }
-
 
     /**
      * Set the debugging detail level for this component.
@@ -279,20 +234,17 @@ public abstract class AuthenticatorBase
         this.debug = debug;
     }
 
-
     /**
-     * Return the entropy increaser value, or compute a semi-useful value
-     * if this String has not yet been set.
+     * Return the entropy increaser value, or compute a semi-useful value if this String has not yet been set.
      */
     public String getEntropy() {
-
         // Calculate a semi-useful value if this has not been set
-        if (this.entropy == null)
-            setEntropy(this.toString());
+        if (entropy == null) {
+            setEntropy(toString());
+        }
 
-        return (this.entropy);
+        return entropy;
     }
-
 
     /**
      * Set the entropy increaser value.
@@ -303,23 +255,20 @@ public abstract class AuthenticatorBase
         this.entropy = entropy;
     }
 
-
     /**
      * Return descriptive information about this Valve implementation.
      */
     @Override
     public String getInfo() {
-        return (this.info);
+        return info;
     }
-
 
     /**
      * Return the random number generator class name.
      */
     public String getRandomClass() {
-        return (this.randomClass);
+        return randomClass;
     }
-
 
     /**
      * Set the random number generator class name.
@@ -331,63 +280,55 @@ public abstract class AuthenticatorBase
     }
 
     /**
-     * Return the flag that states if we add headers to disable caching by
-     * proxies.
+     * Return the flag that states if we add headers to disable caching by proxies.
      */
     public boolean getDisableProxyCaching() {
         return disableProxyCaching;
     }
 
     /**
-     * Set the value of the flag that states if we add headers to disable
-     * caching by proxies.
-     * @param nocache <code>true</code> if we add headers to disable proxy
-     *              caching, <code>false</code> if we leave the headers alone.
+     * Set the value of the flag that states if we add headers to disable caching by proxies.
+     *
+     * @param nocache <code>true</code> if we add headers to disable proxy caching, <code>false</code> if we leave the
+     * headers alone.
      */
     public void setDisableProxyCaching(boolean nocache) {
         disableProxyCaching = nocache;
     }
 
-
     /**
-     * Return the flag that states, if proxy caching is disabled, what headers
-     * we add to disable the caching.
+     * Return the flag that states, if proxy caching is disabled, what headers we add to disable the caching.
      */
     public boolean isSecurePagesWithPragma() {
         return securePagesWithPragma;
     }
 
-
     /**
-     * Set the value of the flag that states what headers we add to disable
-     * proxy caching.
-     * @param securePagesWithPragma <code>true</code> if we add headers which
-     * are incompatible with downloading office documents in IE under SSL but
-     * which fix a caching problem in Mozilla.
+     * Set the value of the flag that states what headers we add to disable proxy caching.
+     *
+     * @param securePagesWithPragma <code>true</code> if we add headers which are incompatible with downloading office
+     * documents in IE under SSL but which fix a caching problem in Mozilla.
      */
     public void setSecurePagesWithPragma(boolean securePagesWithPragma) {
         this.securePagesWithPragma = securePagesWithPragma;
     }
 
     /**
-     * Return the flag that states if we should change the session ID of an
-     * existing session upon successful authentication.
+     * Return the flag that states if we should change the session ID of an existing session upon successful authentication.
      *
-     * @return <code>true</code> to change session ID upon successful
-     *         authentication, <code>false</code> to do not perform the change.
+     * @return <code>true</code> to change session ID upon successful authentication, <code>false</code> to do not perform
+     * the change.
      */
     public boolean isChangeSessionIdOnAuthentication() {
         return changeSessionIdOnAuthentication;
     }
 
     /**
-     * Set the value of the flag that states if we should change the session ID
-     * of an existing session upon successful authentication.
+     * Set the value of the flag that states if we should change the session ID of an existing session upon successful
+     * authentication.
      *
-     * @param changeSessionIdOnAuthentication
-     *            <code>true</code> to change session ID upon successful
-     *            authentication, <code>false</code> to do not perform the
-     *            change.
+     * @param changeSessionIdOnAuthentication <code>true</code> to change session ID upon successful authentication,
+     * <code>false</code> to do not perform the change.
      */
     public void setChangeSessionIdOnAuthentication(boolean changeSessionIdOnAuthentication) {
         this.changeSessionIdOnAuthentication = changeSessionIdOnAuthentication;
@@ -403,10 +344,8 @@ public abstract class AuthenticatorBase
 
     // --------------------------------------------------------- Public Methods
 
-
     /**
-     * Enforce the security restrictions in the web application deployment
-     * descriptor of our associated Context.
+     * Enforce the security restrictions in the web application deployment descriptor of our associated Context.
      *
      * @param request Request to be processed
      * @param response Response to be processed
@@ -415,222 +354,136 @@ public abstract class AuthenticatorBase
      * @exception ServletException if thrown by a processing element
      */
     @Override
-    public int invoke(Request request, Response response)
-    throws IOException, ServletException {
-
-        // START GlassFish 247
+    public int invoke(Request request, Response response) throws IOException, ServletException {
         if (!context.getAvailable()) {
             try {
-                ((HttpServletResponse) response.getResponse())
-                    .sendError(HttpServletResponse.SC_SERVICE_UNAVAILABLE);
+                ((HttpServletResponse) response.getResponse()).sendError(SC_SERVICE_UNAVAILABLE);
             } catch (IllegalStateException e) {
-                ;
+
             } catch (IOException e) {
-                ;
+
             }
+
             return END_PIPELINE;
         }
-        // END GlassFish 247
 
-        /* GlassFish 6386229
-        // If this is not an HTTP request, do nothing
-        if (!(request instanceof HttpRequest) ||
-                !(response instanceof HttpResponse)) {
-            return INVOKE_NEXT;
-        }
-        if (!(request.getRequest() instanceof HttpServletRequest) ||
-                !(response.getResponse() instanceof HttpServletResponse)) {
-            return INVOKE_NEXT;
-        }
-        */
+        HttpRequest httpRequest = (HttpRequest) request;
+        HttpResponse httpResponse = (HttpResponse) response;
+        if (log.isLoggable(FINE)) {
+            String msg = "Security checking request " + ((HttpServletRequest) request.getRequest()).getMethod() + " "
+                    + ((HttpServletRequest) request.getRequest()).getRequestURI();
 
-        HttpRequest hrequest = (HttpRequest) request;
-        HttpResponse hresponse = (HttpResponse) response;
-        if (log.isLoggable(Level.FINE)) {
-            String msg = "Security checking request " +
-                         ((HttpServletRequest) request.getRequest()).getMethod() + " " +
-                         ((HttpServletRequest) request.getRequest()).getRequestURI();
-
-            log.log(Level.FINE, neutralizeForLog(msg));
+            log.log(FINE, neutralizeForLog(msg));
         }
-        LoginConfig config = this.context.getLoginConfig();
+        LoginConfig config = context.getLoginConfig();
 
         // Have we got a cached authenticated Principal to record?
         if (cache) {
-            Principal principal =
-                    ((HttpServletRequest) request.getRequest()).getUserPrincipal();
+            Principal principal = ((HttpServletRequest) request.getRequest()).getUserPrincipal();
             if (principal == null) {
-                Session session = getSession(hrequest);
+                Session session = getSession(httpRequest);
                 if (session != null) {
                     principal = session.getPrincipal();
                     if (principal != null) {
-                        if (log.isLoggable(Level.FINE)) {
-                            String msg = "We have cached auth type " +
-                                         session.getAuthType() +
-                                         " for principal " +
-                                         session.getPrincipal();
-                            log.log(Level.FINE, neutralizeForLog(msg));
-                        }
-                        hrequest.setAuthType(session.getAuthType());
-                        hrequest.setUserPrincipal(principal);
+                        log.log(FINE, () -> neutralizeForLog("We have cached auth type " + session.getAuthType() + " for principal " + session.getPrincipal()));
+                        httpRequest.setAuthType(session.getAuthType());
+                        httpRequest.setUserPrincipal(principal);
                     }
                 }
             }
         }
 
         Realm realm = this.context.getRealm();
+
         // Is this request URI subject to a security constraint?
-        SecurityConstraint [] constraints = realm.
-                findSecurityConstraints(hrequest, this.context);
+        SecurityConstraint[] constraints = realm.findSecurityConstraints(httpRequest, this.context);
 
-        if ((constraints == null) /* &&
-            (!Constants.FORM_METHOD.equals(config.getAuthMethod())) */ ) {
-            if (log.isLoggable(Level.FINE))
-                log.log(Level.FINE, " Not subject to any constraint");
-            return processSecurityCheck(hrequest,hresponse,config);
+        if ((constraints == null) ) {
+            log.log(FINE, " Not subject to any constraint");
+            return processSecurityCheck(httpRequest, httpResponse, config);
         }
 
-        // Make sure that constrained resources are not cached by web proxies
-        // or browsers as caching can provide a security hole
-        //START SJSAS 6202703
-        //Moved to org.apache.catalina.realm.RealmBase
-        /*
-        HttpServletRequest hsrequest = (HttpServletRequest)hrequest.getRequest();
-        if (disableProxyCaching &&
-                !hsrequest.isSecure() &&
-                !"POST".equalsIgnoreCase(hsrequest.getMethod())) {
-            HttpServletResponse sresponse =
-                    (HttpServletResponse) response.getResponse();
-            sresponse.setHeader("Pragma", "No-cache");
-            sresponse.setHeader("Cache-Control", "no-cache");
-            sresponse.setHeader("Expires", DATE_ONE);
-        }
-        */
-        //END SJSAS 6202703
+        log.log(FINE, " Calling hasUserDataPermission()");
 
-        if (log.isLoggable(Level.FINE))
-            log.log(Level.FINE, " Calling hasUserDataPermission()");
-
-        if (!realm.hasUserDataPermission(hrequest, hresponse, constraints)) {
-            if (log.isLoggable(Level.FINE))
-                log.log(Level.FINE, " Failed hasUserDataPermission() test");
+        if (!realm.hasUserDataPermission(httpRequest, httpResponse, constraints)) {
+            log.log(FINE, " Failed hasUserDataPermission() test");
             // ASSERT: Authenticator already set the appropriate
             // HTTP status code, so we do not have to do anything special
             return END_PIPELINE;
         }
 
-        //START SJSAS 6202703
-        /*
-        for(int i=0; i < constraints.length; i++) {
-            // Authenticate based upon the specified login configuration
-            if (constraints[i].getAuthConstraint()) {
-                if (log.isDebugEnabled())
-                    log.debug(" Calling authenticate()");
-
-                if (!authenticate(hrequest, hresponse, config)) {
-                    if (log.isDebugEnabled())
-                        log.debug(" Failed authenticate() test");
-                    //ASSERT: Authenticator already set the appropriate
-                    //HTTP status code, so we do not have to do anything special
-                    return END_PIPELINE;
-                } else {
-                    break;
-                }
-            }
-        }
-         */
-        //END SJSAS 6202703
-        //START SJSAS 6202703
-        int preAuthenticateCheckResult = realm.preAuthenticateCheck(
-                hrequest, hresponse, constraints, disableProxyCaching,
+        int preAuthenticateCheckResult = realm.preAuthenticateCheck(httpRequest, httpResponse, constraints, disableProxyCaching,
                 securePagesWithPragma, (sso != null));
 
-        if(preAuthenticateCheckResult == Realm.AUTHENTICATE_NOT_NEEDED) {
-            return processSecurityCheck(hrequest,hresponse,config);
-        } else if(preAuthenticateCheckResult == Realm.AUTHENTICATE_NEEDED) {
-            if (log.isLoggable(Level.FINE)) {
-                log.log(Level.FINE, " Calling authenticate()");
-            }
-            boolean authenticateResult = realm.invokeAuthenticateDelegate(
-                    hrequest, hresponse, context, this, false);
-            if(!authenticateResult) {
-                if(log.isLoggable(Level.FINE)) {
-                    log.log(Level.FINE, " Failed authenticate() test");
-                }
+        if (preAuthenticateCheckResult == AUTHENTICATE_NOT_NEEDED) {
+            return processSecurityCheck(httpRequest, httpResponse, config);
+        }
+
+        if (preAuthenticateCheckResult == AUTHENTICATE_NEEDED) {
+            log.log(FINE, " Calling authenticate()");
+            boolean authenticateResult = realm.invokeAuthenticateDelegate(httpRequest, httpResponse, context, this, false);
+            if (!authenticateResult) {
+                log.log(FINE, " Failed authenticate() test");
                 return END_PIPELINE;
             }
-        } else if(preAuthenticateCheckResult == Realm.AUTHENTICATED_NOT_AUTHORIZED) {
+        } else if (preAuthenticateCheckResult == AUTHENTICATED_NOT_AUTHORIZED) {
             return END_PIPELINE;
         }
-        //END SJSAS 6202703
 
-        if (log.isLoggable(Level.FINE)) {
-            log.log(Level.FINE, " Calling accessControl()");
-        }
+        log.log(FINE, " Calling accessControl()");
 
-        if (!realm.hasResourcePermission(hrequest, hresponse,
-                constraints,
-                this.context)) {
-            if (log.isLoggable(Level.FINE)) {
-                log.log(Level.FINE, " Failed accessControl() test");
-            }
+        if (!realm.hasResourcePermission(httpRequest, httpResponse, constraints, this.context)) {
+            log.log(FINE, " Failed accessControl() test");
 
-            // START IASRI 4823322
-            Auditor[] auditors = this.context.getAuditors();
+            Auditor[] auditors = context.getAuditors();
             if (auditors != null) {
-                for (int j=0; j<auditors.length; j++) {
-                    auditors[j].webInvocation(hrequest, false);
+                for (Auditor auditor : auditors) {
+                    auditor.webInvocation(httpRequest, false);
                 }
             }
-            // END IASRI 4823322
 
             /*
-             * ASSERT: AccessControl method has already set the
-             * appropriate HTTP status code, so we do not have to do
-             * anything special
+             * ASSERT: AccessControl method has already set the appropriate HTTP status code, so we do not have to do anything
+             * special
              */
             return END_PIPELINE;
         }
 
-        // START IASRI 4823322
         Auditor[] auditors = this.context.getAuditors();
         if (auditors != null) {
-            boolean success=true;
-            for (int j=0; j<auditors.length; j++) {
+            boolean success = true;
+            for (Auditor auditor : auditors) {
                 try {
-                    auditors[j].webInvocation(hrequest, true);
+                    auditor.webInvocation(httpRequest, true);
                 } catch (Exception e) {
-                    success=false;
+                    success = false;
                 }
             }
-            if (!success) {     // fail authorization if auditor blew up
+            if (!success) { // fail authorization if auditor blew up
                 return END_PIPELINE;
             }
         }
-        // END IASRI 4823322
 
         // Any and all specified constraints have been satisfied
-        if (log.isLoggable(Level.FINE))
-            log.log(Level.FINE, "Successfully passed all security constraints");
+        log.log(FINE, "Successfully passed all security constraints");
+
         return INVOKE_NEXT;
     }
 
     /**
      * A post-request processing implementation that does nothing.
      *
-     * Very few Valves override this behaviour as most Valve logic
-     * is used for request processing.
+     * Very few Valves override this behaviour as most Valve logic is used for request processing.
      */
     @Override
-    public void postInvoke(Request request, Response response)
-            throws IOException, ServletException {
-        Realm realm = this.context.getRealm();
+    public void postInvoke(Request request, Response response) throws IOException, ServletException {
+        Realm realm = context.getRealm();
         HttpRequest hrequest = (HttpRequest) request;
         HttpResponse hresponse = (HttpResponse) response;
+
         /*
-         * Check realm for null since app may have been undeployed by the
-         * time its pipeline is invoked on the way out, in which case its
-         * realm will have been set to null. See IT 6801
+         * Check realm for null since app may have been undeployed by the time its pipeline is invoked on the way out, in which
+         * case its realm will have been set to null. See IT 6801
          */
         if (realm != null) {
             realm.invokePostAuthenticateDelegate(hrequest, hresponse, context);
@@ -639,138 +492,104 @@ public abstract class AuthenticatorBase
 
     // ------------------------------------------------------ Protected Methods
 
-
-
-
     /**
-     * Associate the specified single sign on identifier with the
-     * specified Session.
+     * Associate the specified single sign on identifier with the specified Session.
      *
      * @param ssoId Single sign on identifier
      * @param ssoVersion Single sign on version
      * @param session Session to be associated
      */
-    protected void associate(String ssoId, long ssoVersion,
-            Session session) {
-
-        if (sso == null)
+    protected void associate(String ssoId, long ssoVersion, Session session) {
+        if (sso == null) {
             return;
-        sso.associate(ssoId, ssoVersion, session);
+        }
 
+        sso.associate(ssoId, ssoVersion, session);
     }
 
-
     /**
-     * Authenticate the user making this request, based on the specified
-     * login configuration.  Return <code>true</code> if any specified
-     * constraint has been satisfied, or <code>false</code> if we have
-     * created a response challenge already.
+     * Authenticate the user making this request, based on the specified login configuration. Return <code>true</code> if
+     * any specified constraint has been satisfied, or <code>false</code> if we have created a response challenge already.
      *
      * @param request Request we are processing
      * @param response Response we are creating
-     * @param config Login configuration describing how authentication
-     * should be performed
+     * @param config Login configuration describing how authentication should be performed
      *
      * @exception IOException if an input/output error occurs
      */
-    //START SJSAS 6202703
-    /*
-    protected abstract boolean authenticate(HttpRequest request,
-                                            HttpResponse response,
-                                            LoginConfig config)
-        throws IOException;
-     */
-    public abstract boolean authenticate(HttpRequest request,
-                                         HttpResponse response,
-                                         LoginConfig config)
-            throws IOException;
-    //END SJSAS 6202703
-
+    public abstract boolean authenticate(HttpRequest request, HttpResponse response, LoginConfig config) throws IOException;
 
     /**
-     * Generate and return a new session identifier for the cookie that
-     * identifies an SSO principal.
+     * Generate and return a new session identifier for the cookie that identifies an SSO principal.
      */
     protected synchronized String generateSessionId() {
-
         // Generate a byte array containing a session identifier
         byte bytes[] = new byte[SESSION_ID_BYTES];
         getRandom().nextBytes(bytes);
 
         // Render the result as a String of hexadecimal digits
         StringBuilder result = new StringBuilder();
-        for (int i = 0; i < bytes.length; i++) {
-            byte b1 = (byte) ((bytes[i] & 0xf0) >> 4);
-            byte b2 = (byte) (bytes[i] & 0x0f);
-            if (b1 < 10)
+        for (byte element : bytes) {
+            byte b1 = (byte) ((element & 0xf0) >> 4);
+            byte b2 = (byte) (element & 0x0f);
+            if (b1 < 10) {
                 result.append((char) ('0' + b1));
-            else
+            } else {
                 result.append((char) ('A' + (b1 - 10)));
-            if (b2 < 10)
+            }
+            if (b2 < 10) {
                 result.append((char) ('0' + b2));
-            else
+            } else {
                 result.append((char) ('A' + (b2 - 10)));
+            }
         }
         return (result.toString());
 
     }
 
-
     /**
-     * Return the random number generator instance we should use for
-     * generating session identifiers.  If there is no such generator
-     * currently defined, construct and seed a new one.
+     * Return the random number generator instance we should use for generating session identifiers. If there is no such
+     * generator currently defined, construct and seed a new one.
      */
     protected synchronized SecureRandom getRandom() {
-
-        if (this.random == null) {
+        if (random == null) {
             try {
-                Class clazz = Class.forName(randomClass);
-                this.random = (SecureRandom) clazz.newInstance();
+                random = (SecureRandom) Class.forName(randomClass).getDeclaredConstructor().newInstance();
                 long seed = System.currentTimeMillis();
                 char entropy[] = getEntropy().toCharArray();
                 for (int i = 0; i < entropy.length; i++) {
                     long update = ((byte) entropy[i]) << ((i % 8) * 8);
                     seed ^= update;
                 }
-                this.random.setSeed(seed);
+                random.setSeed(seed);
             } catch (Exception e) {
-                this.random = new SecureRandom();
+                random = new SecureRandom();
             }
         }
 
-        return (this.random);
-
+        return random;
     }
 
-
     /**
-     * Return the internal Session that is associated with this HttpRequest,
-     * or <code>null</code> if there is no such Session.
+     * Return the internal Session that is associated with this HttpRequest, or <code>null</code> if there is no such
+     * Session.
      *
      * @param request The HttpRequest we are processing
      */
     protected Session getSession(HttpRequest request) {
-
-        return (getSession(request, false));
-
+        return getSession(request, false);
     }
 
-
     /**
-     * Return the internal Session that is associated with this HttpRequest,
-     * possibly creating a new one if necessary, or <code>null</code> if
-     * there is no such session and we did not create one.
+     * Return the internal Session that is associated with this HttpRequest, possibly creating a new one if necessary, or
+     * <code>null</code> if there is no such session and we did not create one.
      *
      * @param request The HttpRequest we are processing
      * @param create Should we create a session if needed?
      */
     protected Session getSession(HttpRequest request, boolean create) {
-
         return request.getSessionInternal(create);
-
     }
-
 
     /**
      * Log a message on the Logger associated with our Container (if any).
@@ -779,17 +598,14 @@ public abstract class AuthenticatorBase
      */
     protected void log(String message) {
         message = neutralizeForLog(message);
+
         org.apache.catalina.Logger logger = context.getLogger();
         if (logger != null) {
-            logger.log("Authenticator[" + context.getPath() + "]: " +
-                    message);
-        } else {
-            if (log.isLoggable(Level.INFO)) {
-                log.log(Level.INFO, LogFacade.AUTHENTICATOR_INFO, new Object[] {context.getPath(), message});
-            }
+            logger.log("Authenticator[" + context.getPath() + "]: " + message);
+        } else if (log.isLoggable(INFO)) {
+            log.log(INFO, LogFacade.AUTHENTICATOR_INFO, new Object[] { context.getPath(), message });
         }
     }
-
 
     /**
      * Log a message on the Logger associated with our Container (if any).
@@ -799,23 +615,19 @@ public abstract class AuthenticatorBase
      */
     protected void log(String message, Throwable t) {
         message = neutralizeForLog(message);
+
         org.apache.catalina.Logger logger = context.getLogger();
         if (logger != null) {
-            logger.log("Authenticator[" + context.getPath() + "]: " +
-                message, t, org.apache.catalina.Logger.WARNING);
+            logger.log("Authenticator[" + context.getPath() + "]: " + message, t, org.apache.catalina.Logger.WARNING);
         } else {
-            String msg = MessageFormat.format(rb.getString(LogFacade.AUTHENTICATOR_INFO),
-                                              new Object[] {context.getPath(), message});
+            String msg = MessageFormat.format(rb.getString(LogFacade.AUTHENTICATOR_INFO), new Object[] { context.getPath(), message });
             log.log(Level.WARNING, msg, t);
         }
     }
 
-
     /**
-     * Register an authenticated Principal and authentication type in our
-     * request, in the current session (if there is one), and with our
-     * SingleSignOn valve, if there is one.  Set the appropriate cookie
-     * to be returned.
+     * Register an authenticated Principal and authentication type in our request, in the current session (if there is one),
+     * and with our SingleSignOn valve, if there is one. Set the appropriate cookie to be returned.
      *
      * @param request The servlet request we are processing
      * @param response The servlet response we are generating
@@ -824,16 +636,13 @@ public abstract class AuthenticatorBase
      * @param username Username used to authenticate (if any)
      * @param password Password used to authenticate (if any)
      */
-    protected void register(HttpRequest request, HttpResponse response,
-            Principal principal, String authType,
-            String username, char[] password) {
-
-        if (log.isLoggable(Level.FINE)) {
+    protected void register(HttpRequest request, HttpResponse response, Principal principal, String authType, String username, char[] password) {
+        if (log.isLoggable(FINE)) {
             String pname = ((principal != null) ? principal.getName() : "[null principal]");
-            String msg = "Authenticated '" + pname + "' with type '"
-                         + authType + "'";
-            log.log(Level.FINE, neutralizeForLog(msg));
+            String msg = "Authenticated '" + pname + "' with type '" + authType + "'";
+            log.log(FINE, neutralizeForLog(msg));
         }
+
         // Cache the authentication information in our request
         request.setAuthType(authType);
         request.setUserPrincipal(principal);
@@ -850,67 +659,64 @@ public abstract class AuthenticatorBase
             if (session != null) {
                 session.setAuthType(authType);
                 session.setPrincipal(principal);
-                if (username != null)
-                    session.setNote(Constants.SESS_USERNAME_NOTE, username);
-                else
-                    session.removeNote(Constants.SESS_USERNAME_NOTE);
-                if (password != null)
-                    session.setNote(Constants.SESS_PASSWORD_NOTE, password);
-                else
-                    session.removeNote(Constants.SESS_PASSWORD_NOTE);
+                if (username != null) {
+                    session.setNote(SESS_USERNAME_NOTE, username);
+                } else {
+                    session.removeNote(SESS_USERNAME_NOTE);
+                }
+                if (password != null) {
+                    session.setNote(SESS_PASSWORD_NOTE, password);
+                } else {
+                    session.removeNote(SESS_PASSWORD_NOTE);
+                }
             }
         }
 
         // Construct a cookie to be returned to the client
-        if (sso == null)
+        if (sso == null) {
             return;
-        HttpServletRequest hreq = (HttpServletRequest) request.getRequest();
-        HttpServletResponse hres = (HttpServletResponse) response.getResponse();
+        }
+
+        HttpServletRequest httpServletRequest = (HttpServletRequest) request.getRequest();
+        HttpServletResponse httpServletResponse = (HttpServletResponse) response.getResponse();
 
         // Use the connector's random number generator (if any) for
         // generating the session ID. If none, then fall back to the default
         // session ID generator.
-        String value = request.generateSessionId();
-        if (value == null) {
-            value = generateSessionId();
+        String generatedSessionId = request.generateSessionId();
+        if (generatedSessionId == null) {
+            generatedSessionId = generateSessionId();
         }
 
-        Cookie cookie = new Cookie(Constants.SINGLE_SIGN_ON_COOKIE, value);
+        Cookie cookie = new Cookie(Constants.SINGLE_SIGN_ON_COOKIE, generatedSessionId);
         cookie.setMaxAge(-1);
         cookie.setPath("/");
         StandardHost host = (StandardHost) context.getParent();
         if (host != null) {
-            host.configureSingleSignOnCookieSecure(cookie, hreq);
+            host.configureSingleSignOnCookieSecure(cookie, httpServletRequest);
             host.configureSingleSignOnCookieHttpOnly(cookie);
         } else {
-            cookie.setSecure(hreq.isSecure());
+            cookie.setSecure(httpServletRequest.isSecure());
         }
-        hres.addCookie(cookie);
+        httpServletResponse.addCookie(cookie);
 
         // Register this principal with our SSO valve
-        /* BEGIN S1AS8 PE 4856080,4918627
-        sso.register(value, principal, authType, username, password);
-         */
-        // BEGIN S1AS8 PE 4856080,4918627
-        String realm = context.getRealm().getRealmName();
-        // being here, an authentication just occurred using the realm
-        assert(realm != null);
-        sso.register(value, principal, authType, username, password, realm);
-        // END S1AS8 PE 4856080,4918627
+        String realmName = context.getRealm().getRealmName();
 
-        request.setNote(Constants.REQ_SSOID_NOTE, value);
+        // Being here, an authentication just occurred using the realm
+        sso.register(generatedSessionId, principal, authType, username, password, realmName);
+
+        request.setNote(REQ_SSOID_NOTE, generatedSessionId);
         if (sso.isVersioningSupported()) {
-            request.setNote(Constants.REQ_SSO_VERSION_NOTE, Long.valueOf(0));
+            request.setNote(REQ_SSO_VERSION_NOTE, Long.valueOf(0));
         }
-
     }
 
     @Override
-    public void login(String username, char[] password, HttpRequest request)
-            throws ServletException {
+    public void login(String username, char[] password, HttpRequest request) throws ServletException {
         Principal principal = doLogin(request, username, password);
-        register(request, (HttpResponse)request.getResponse(), principal,
-                getAuthMethod(), username, password);
+
+        register(request, (HttpResponse) request.getResponse(), principal, getAuthMethod(), username, password);
     }
 
     protected abstract String getAuthMethod();
@@ -918,19 +724,19 @@ public abstract class AuthenticatorBase
     /**
      * Process the login request.
      *
-     * @param request   Associated request
-     * @param username  The user
-     * @param password  The password
-     * @return          The authenticated Principal
+     * @param request Associated request
+     * @param username The user
+     * @param password The password
+     * @return The authenticated Principal
      * @throws ServletException
      */
-    protected Principal doLogin(HttpRequest request, String username,
-                                char[] password) throws ServletException {
-        Principal p = context.getRealm().authenticate(username, password);
-        if (p == null) {
-            throw new ServletException(rb.getString(LogFacade.LOGIN_FAIL));
+    protected Principal doLogin(HttpRequest request, String username, char[] password) throws ServletException {
+        Principal callerPrincipal = context.getRealm().authenticate(request, username, password);
+        if (callerPrincipal == null) {
+            throw new ServletException(rb.getString(LOGIN_FAIL));
         }
-        return p;
+
+        return callerPrincipal;
     }
 
     @Override
@@ -941,33 +747,26 @@ public abstract class AuthenticatorBase
             session.setAuthType(null);
         }
 
-        // principal and authType set to null in the following
-        register(request, (HttpResponse)request.getResponse(), null,
-                null, null, null);
+        // Principal and authType set to null in the following
+        register(request, (HttpResponse) request.getResponse(), null, null, null, null);
     }
 
     // ------------------------------------------------------ Private Methods
 
-    private int processSecurityCheck(HttpRequest hrequest,
-                     HttpResponse hresponse,
-                     LoginConfig config)
-    throws IOException {
+    private int processSecurityCheck(HttpRequest hrequest, HttpResponse hresponse, LoginConfig config) throws IOException {
+        // Special handling for form-based logins to deal with the case where the login form
+        // (and therefore the "j_security_check" URI to which it submits) might be outside the secured area
 
-        // Special handling for form-based logins to deal with the case
-        // where the login form (and therefore the "j_security_check" URI
-        // to which it submits) might be outside the secured area
-        String contextPath = this.context.getPath();
+        String contextPath = context.getPath();
         String requestURI = hrequest.getDecodedRequestURI();
-        if (requestURI.startsWith(contextPath) && this.getClass().equals(FormAuthenticator.class) &&
-                requestURI.endsWith(Constants.FORM_ACTION)) {
+        if (requestURI.startsWith(contextPath) && getClass().equals(FormAuthenticator.class) && requestURI.endsWith(FORM_ACTION)) {
             if (!authenticate(hrequest, hresponse, config)) {
-                if (log.isLoggable(Level.FINE)) {
-                    String msg = " Failed authenticate() test ??" + requestURI;
-                    log.log(Level.FINE, neutralizeForLog(msg));
-                }
+                log.log(FINE, () -> neutralizeForLog(" Failed authenticate() test ??" + requestURI));
+
                 return END_PIPELINE;
             }
         }
+
         return INVOKE_NEXT;
     }
 
@@ -975,78 +774,31 @@ public abstract class AuthenticatorBase
 
 
     /**
-     * Add a lifecycle event listener to this component.
+     * Prepare for the beginning of active use of the public methods of this component. This method should be called after
+     * <code>configure()</code>, and before any of the public methods of the component are utilized.
      *
-     * @param listener The listener to add
-     */
-    /** CR 6411114 (Lifecycle implementation moved to ValveBase)
-    public void addLifecycleListener(LifecycleListener listener) {
-
-        lifecycle.addLifecycleListener(listener);
-
-    }
-    */
-
-
-    /**
-     * Get the lifecycle listeners associated with this lifecycle. If this
-     * Lifecycle has no listeners registered, a zero-length array is returned.
-     */
-    /** CR 6411114 (Lifecycle implementation moved to ValveBase)
-    public LifecycleListener[] findLifecycleListeners() {
-
-        return lifecycle.findLifecycleListeners();
-
-    }
-    */
-
-
-    /**
-     * Remove a lifecycle event listener from this component.
-     *
-     * @param listener The listener to remove
-     */
-    /** CR 6411114 (Lifecycle implementation moved to ValveBase)
-    public void removeLifecycleListener(LifecycleListener listener) {
-
-        lifecycle.removeLifecycleListener(listener);
-
-    }
-    */
-
-
-    /**
-     * Prepare for the beginning of active use of the public methods of this
-     * component.  This method should be called after <code>configure()</code>,
-     * and before any of the public methods of the component are utilized.
-     *
-     * @exception LifecycleException if this component detects a fatal error
-     *  that prevents this component from being used
+     * @exception LifecycleException if this component detects a fatal error that prevents this component from being used
      */
     @Override
     public void start() throws LifecycleException {
-        // START CR 6411114
-        if (started)            // Ignore multiple starts
+        if (started) { // Ignore multiple starts
             return;
+        }
+
         super.start();
-        // END CR 6411114
-        if ("org.apache.catalina.core.StandardContext".equals
-                (context.getClass().getName())) {
+
+        if ("org.apache.catalina.core.StandardContext".equals(context.getClass().getName())) {
             try {
                 // XXX What is this ???
                 Class paramTypes[] = new Class[0];
                 Object paramValues[] = new Object[0];
-                Method method =
-                        context.getClass().getMethod("getDebug", paramTypes);
+                Method method = context.getClass().getMethod("getDebug", paramTypes);
                 Integer result = (Integer) method.invoke(context, paramValues);
                 setDebug(result.intValue());
             } catch (Exception e) {
-                log.log(Level.SEVERE, LogFacade.GETTING_DEBUG_VALUE_EXCEPTION, e);
+                log.log(SEVERE, GETTING_DEBUG_VALUE_EXCEPTION, e);
             }
         }
-        /** CR 6411114 (Lifecycle implementation moved to ValveBase)
-        started = true;
-        */
 
         // Look up the SingleSignOn implementation in our request processing
         // path, if there is one
@@ -1056,51 +808,46 @@ public abstract class AuthenticatorBase
                 parent = parent.getParent();
                 continue;
             }
+
             GlassFishValve valves[] = ((Pipeline) parent).getValves();
-            for (int i = 0; i < valves.length; i++) {
-                if (valves[i] instanceof SingleSignOn) {
-                    sso = (SingleSignOn) valves[i];
+            for (GlassFishValve element : valves) {
+                if (element instanceof SingleSignOn) {
+                    sso = (SingleSignOn) element;
                     break;
                 }
             }
-            if (sso == null)
+
+            if (sso == null) {
                 parent = parent.getParent();
+            }
         }
-        if (log.isLoggable(Level.FINE)) {
-            if (sso != null)
-                log.log(Level.FINE, "Found SingleSignOn Valve at " + sso);
-            else
-                log.log(Level.FINE, "No SingleSignOn Valve is present");
+
+        if (sso != null) {
+            log.log(FINE, () -> "Found SingleSignOn Valve at " + sso);
+        } else {
+            log.log(FINE, "No SingleSignOn Valve is present");
         }
 
     }
 
-
     /**
-     * Gracefully terminate the active use of the public methods of this
-     * component.  This method should be the last one called on a given
-     * instance of this component.
+     * Gracefully terminate the active use of the public methods of this component. This method should be the last one
+     * called on a given instance of this component.
      *
-     * @exception LifecycleException if this component detects a fatal error
-     *  that needs to be reported
+     * @exception LifecycleException if this component detects a fatal error that needs to be reported
      */
     @Override
     public void stop() throws LifecycleException {
-        // START CR 6411114
-        if (!started)       // Ignore stop if not started
+        if (!started) { // Ignore stop if not started
             return;
-        // END CR 6411114
+        }
 
         sso = null;
-        // START CR 6411114
         super.stop();
-        // END CR 6411114
-
     }
-    // BEGIN S1AS8 PE 4856062,4918627
+
     /**
-     * Set the name of the associated realm. This method does nothing by
-     * default.
+     * Set the name of the associated realm. This method does nothing by default.
      *
      * @param name the name of the realm.
      */
@@ -1108,16 +855,13 @@ public abstract class AuthenticatorBase
 
     }
 
-
     /**
-     * Returns the name of the associated realm. Always returns null unless
-     * subclass overrides behavior.
+     * Returns the name of the associated realm. Always returns null unless subclass overrides behavior.
      *
      * @return realm name or null if not set.
      */
     public String getRealmName() {
         return null;
     }
-    // END S1AS8 PE 4856062,4918627
 
 }
